--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
   font-family: var(--primary-font);
   color: var(--main-text-color);
   font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 2.4rem;
 
   text-transform: uppercase;
 }
@@ -56,7 +56,7 @@ img {
   margin: 0 auto;
 }
 button {
-  padding: 1.5rem 6rem;
+  padding: 1.5rem 3rem;
   text-align: center;
   text-decoration: none;
   border: 3px solid var(--color-4);
@@ -69,14 +69,16 @@ button {
   font-size: 1.5rem;
   margin: 0 auto;
   display: block;
-  width: 25rem;
+  width: 100%;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .secondary_button {
   color: var(--secondary-text-color);
   background-color: var(--color-4);
 
-  padding: 1.5rem 6rem;
+  padding: 1.5rem 3rem;
   text-align: center;
   text-decoration: none;
   font-size: 1.5rem;
@@ -84,10 +86,12 @@ button {
   cursor: pointer;
   text-transform: uppercase;
   display: block;
-  width: 25rem;
+  width: 100%;
 }
-.memover_benefits,
-.memover_benefits2 {
+.memover_benefits section,
+.memover_benefits2 section,
+#stories section,
+#faq section {
   background-color: var(--main-bg-color);
   padding: 2rem 1.5rem;
 }
@@ -95,6 +99,12 @@ button {
   padding: 1rem;
   background: black;
   padding: 2rem 1.5rem;
+}
+#logo {
+  display: inline-block;
+}
+#logo img {
+  width: 80%;
 }
 #why_memover {
   background-color: var(--color-4);
@@ -116,7 +126,8 @@ button {
 .description_wrapper {
   display: flex;
   flex-direction: column;
-  align-self: center;
+
+  height: 110px;
 }
 .icon img {
   margin: 0;
@@ -142,12 +153,16 @@ button {
 }
 #shop_bg {
   background-image: url(assets/memovers_bg.png);
-  height: 500px;
-  display: flex;
+  height: 550px;
 
   background-position: bottom center;
+  margin-top: 2rem;
+  display: grid;
 }
 #shop_btn {
+}
+#shop_bg section {
+  padding: 2rem 1.5rem;
   align-self: center;
 }
 #try_memover {
@@ -155,4 +170,29 @@ button {
 }
 #main_buttons {
   padding: 1rem 0;
+}
+#rent_bg {
+  background-image: url(assets/peopleonmemovers_bg.png);
+  background-position: 46% 42%;
+
+  height: 550px;
+  display: flex;
+}
+#rent_bg section {
+  padding: 2rem 1.5rem;
+  align-self: center;
+}
+#faq #faq_icons {
+  padding: 2rem 1.5rem;
+  background: var(--secondary-bg-color);
+}
+#reviews h2 {
+  color: var(--secondary-text-color);
+  padding: 2rem 1.5rem;
+}
+#arrow_icon {
+  display: none;
+}
+.stars img {
+  width: 40%;
 }
