--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ img {
   margin: 0 auto;
 }
 button {
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 0;
   text-align: center;
   text-decoration: none;
   border: 3px solid var(--color-4);
@@ -71,14 +71,14 @@ button {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
-  margin-top: 1rem;
+  margin-top: 1.75rem;
 }
 
 .secondary_button {
   color: var(--secondary-text-color);
   background-color: var(--color-4);
 
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 0rem;
   text-align: center;
   text-decoration: none;
   font-size: 1.5rem;
@@ -88,17 +88,25 @@ button {
   display: block;
   width: 100%;
 }
+section {
+  padding: 2rem 1.5rem;
+}
+
 .memover_benefits section,
 .memover_benefits2 section,
 #stories section,
-#faq section {
+#faq section,
+#communities section {
   background-color: var(--main-bg-color);
-  padding: 2rem 1.5rem;
+  remove
 }
 #art_video_bg {
   padding: 1rem;
   background: black;
-  padding: 2rem 1.5rem;
+  
+}
+#watch_video {
+  margin-top: 1rem;
 }
 #logo {
   display: inline-block;
@@ -108,7 +116,11 @@ button {
 }
 #why_memover {
   background-color: var(--color-4);
-  padding: 2rem 1.5rem;
+ 
+  
+}
+#why_memover section:first-child {
+  padding-bottom: 0;
 }
 #why_memover h3,
 #why_memover p {
@@ -121,8 +133,9 @@ button {
   display: grid;
   grid-template-columns: 5rem 1fr;
   padding-top: 2rem;
-  grid-column-gap: 2rem;
+  grid-column-gap: 1rem;
 }
+
 .description_wrapper {
   display: flex;
   flex-direction: column;
@@ -152,17 +165,17 @@ button {
   padding-bottom: 1rem;
 }
 #shop_bg {
-  background-image: url(assets/memovers_bg.png);
+  background-image: url(assets/memovers_bgdark.png);
   height: 550px;
 
-  background-position: bottom center;
+  background-position: 40% bottom;
   margin-top: 2rem;
   display: grid;
 }
 #shop_btn {
 }
 #shop_bg section {
-  padding: 2rem 1.5rem;
+  
   align-self: center;
 }
 #try_memover {
@@ -172,18 +185,19 @@ button {
   padding: 1rem 0;
 }
 #rent_bg {
-  background-image: url(assets/peopleonmemovers_bg.png);
+  background-image: url(assets/peopleonmemovers_bgdark.png);
   background-position: 46% 42%;
 
   height: 550px;
   display: flex;
 }
+
 #rent_bg section {
-  padding: 2rem 1.5rem;
+  
   align-self: center;
 }
 #faq #faq_icons {
-  padding: 2rem 1.5rem;
+  
   background: var(--secondary-bg-color);
 }
 #reviews h2 {
@@ -195,4 +209,90 @@ button {
 }
 .stars img {
   width: 40%;
+  display: inline-flex;
+}
+.stars {
+  padding-bottom: 1rem;
+  
+}
+#review_wrapper {
+  display: grid;
+}
+.review {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--secondary-bg-color);
+  margin-bottom: 1rem;
+  color: var(--secondary-text-color);
+  font-family: var(--primary-font);
+  font-size: 1rem;
+ 
+}
+.review:last-child {
+  margin-bottom: 0;
+}
+
+.review_title {
+
+  padding-bottom: 1rem;
+  font-weight: bold;
+}
+.review_text {
+  padding-bottom: 1rem;
+  font-size: 0.875rem;
+}
+.review_name{
+  padding-bottom: 1rem;
+  font-weight: bold;
+}
+
+#view_all {
+  padding: 1.5rem 3rem;
+  text-align: center;
+  text-decoration: none;
+  border: 3px solid var(--main-bg-color);
+  color: var(--main-bg-color);
+  font-family: var(--primary-font);
+  font-weight: bold;
+  background: transparent;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+.btn_wrapper {
+  padding: 2rem 1.5rem;
+}
+
+#some {
+  background-color: var(--secondary-bg-color);
+  padding: 2rem 1.5rem;
+}
+#socialmedia_icons{
+  
+  display: flex;
+  flex-direction: row;
+ 
+}
+#socialmedia_icons img {
+width: 100%;
+padding: 0.4rem;
+}
+#socialmedia_icons img:first-child {
+  padding-left: 0;
+}
+#socialmedia_icons img:last-child {
+  padding-right: 0;
+}
+.follow {
+  font-family: var(--primary-font);
+  font-weight: bold;
+  color: var(--color-3);
+  font-size: 1rem;
+  text-align: center;
+  padding-top: 1rem;
 }
