--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   margin: 0;
 }
 img {
-  max-width: 100%;
+  width: 100%;
   display: block;
   margin: 0 auto;
 }
@@ -78,10 +78,10 @@ button {
   color: var(--secondary-text-color);
   background-color: var(--color-4);
 
-  padding: 1.5rem 0rem;
+  padding: 1.5rem 0;
   text-align: center;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.375rem;
   border: 3px solid var(--main-bg-color);
   cursor: pointer;
   text-transform: uppercase;
@@ -101,8 +101,13 @@ section {
   remove
 }
 #art_video_bg {
-  padding: 1rem;
+  
   background: black;
+  
+}
+#art_video_bg section{
+  padding-top: 0;
+
   
 }
 #watch_video {
@@ -110,6 +115,7 @@ section {
 }
 #logo {
   display: inline-block;
+  padding: 1rem;
 }
 #logo img {
   width: 80%;
@@ -196,6 +202,11 @@ section {
   
   align-self: center;
 }
+#rent_bg section h3 {
+  text-transform: uppercase;
+  font-weight: bold;
+  
+}
 #faq #faq_icons {
   
   background: var(--secondary-bg-color);
@@ -210,6 +221,7 @@ section {
 .stars img {
   width: 40%;
   display: inline-flex;
+  
 }
 .stars {
   padding-bottom: 1rem;
@@ -281,6 +293,7 @@ section {
 #socialmedia_icons img {
 width: 100%;
 padding: 0.4rem;
+
 }
 #socialmedia_icons img:first-child {
   padding-left: 0;
@@ -295,4 +308,149 @@ padding: 0.4rem;
   font-size: 1rem;
   text-align: center;
   padding-top: 1rem;
+}
+
+
+@media only screen and (min-width: 768px) {
+button, .secondary_button, #view_all {
+  width: 50%;
+}
+#socialmedia_icons img, #socialmedia_icons img:first-child, #socialmedia_icons img:last-child {
+ width: 15%;
+  padding: 0.5rem;
+}
+.stars img {
+  width: 20%;
+}
+.icons_wrapper{
+  padding-top: 1rem;
+}
+}
+
+@media only screen and (min-width: 992px) {
+  #art_video_bg section{
+    text-align: center;
+    width: 70%;
+    margin: 0 auto;
+  }
+#logo img{
+  display: inline-block;
+}
+
+#main_buttons {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+  margin: 0 auto;
+  
+}
+#watch_video, #try_memover {
+  margin: 0;
+  width: 100%;
+ 
+}
+.btn_container {
+  width: 100%;
+ padding: 1rem;
+}
+#arrow_icon {
+  display: block;
+  margin: 0 auto;
+  padding: 2rem;
+}
+#arrow_icon img{
+  
+  width: 3%;
+ 
+}
+section {
+  padding: 4rem;
+}
+.memover_benefits {
+  display: grid;
+  grid-template-columns: 55% 45%;
+  background: var(--main-bg-color);
+}
+.memover_benefits img {
+  grid-column: 1/2;
+  grid-row: 1 /2;
+}
+.memover_benefits section {
+  grid-column: 2 / -1;
+  align-self: center;
+}
+.memover_benefits2 {
+  display: grid;
+  grid-template-columns: 45% 55%;
+  background: var(--main-bg-color);
+}
+.memover_benefits2 section {
+  align-self: center;
+}
+#why_memover {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+#why_memover section {
+  
+}
+#why_memover h3 {
+  font-size: 2.5rem;
+}
+.description_wrapper {
+  height: 80px;
+  
+}
+.icons_wrapper{
+  padding-top: 1rem;
+  
+}
+.icons_wrapper:first-child{
+  padding-top: 0;
+  margin-top: 2.5rem ;
+}
+#shop_btn, #view_all, #more_about {
+  width: 30%;
+}
+#stories {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  background: var(--main-bg-color);
+}
+#stories section {
+  grid-column: 1/2;
+  grid-row: 1 /2;
+  align-self: center;
+}
+#stories img {
+  grid-column: 2 / -1;
+  align-self: center;
+}
+#learn_more {
+  display: inline;
+}
+#rent_bg section {
+  width: 90%;
+  margin: 0 auto;
+}
+#rent_bg section h3 {
+  font-size: 2rem;
+  
+}
+#faq {
+  display: grid;
+  grid-template-columns: 55% 45%;
+  background: var(--main-bg-color);
+}
+
+#reviews {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+#reviews h2{
+  grid-column: 1 / -1;
+}
+.btn_wrapper {
+  grid-column: 1 / -1;
+}
 }
