--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ a {
 html {
   font-size: 100%;
 }
-body {
+body,
+html {
   margin: 0;
 }
 img {
@@ -98,17 +99,24 @@ section {
 #faq section,
 #communities section {
   background-color: var(--main-bg-color);
-  remove
 }
-#art_video_bg {
+
+/* #art_video_bg {
   
   background: black;
   
-}
-#art_video_bg section{
-  padding-top: 0;
+} */
 
-  
+#videoBG {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 90%;
+  position: fixed;
+  z-index: -1;
+}
+#art_video_bg section {
+  padding-top: 0;
 }
 #watch_video {
   margin-top: 1rem;
@@ -122,8 +130,6 @@ section {
 }
 #why_memover {
   background-color: var(--color-4);
- 
-  
 }
 #why_memover section:first-child {
   padding-bottom: 0;
@@ -181,7 +187,6 @@ section {
 #shop_btn {
 }
 #shop_bg section {
-  
   align-self: center;
 }
 #try_memover {
@@ -199,16 +204,13 @@ section {
 }
 
 #rent_bg section {
-  
   align-self: center;
 }
 #rent_bg section h3 {
   text-transform: uppercase;
   font-weight: bold;
-  
 }
 #faq #faq_icons {
-  
   background: var(--secondary-bg-color);
 }
 #reviews h2 {
@@ -221,11 +223,9 @@ section {
 .stars img {
   width: 40%;
   display: inline-flex;
-  
 }
 .stars {
   padding-bottom: 1rem;
-  
 }
 #review_wrapper {
   display: grid;
@@ -238,14 +238,12 @@ section {
   color: var(--secondary-text-color);
   font-family: var(--primary-font);
   font-size: 1rem;
- 
 }
 .review:last-child {
   margin-bottom: 0;
 }
 
 .review_title {
-
   padding-bottom: 1rem;
   font-weight: bold;
 }
@@ -253,7 +251,7 @@ section {
   padding-bottom: 1rem;
   font-size: 0.875rem;
 }
-.review_name{
+.review_name {
   padding-bottom: 1rem;
   font-weight: bold;
 }
@@ -284,16 +282,13 @@ section {
   background-color: var(--secondary-bg-color);
   padding: 2rem 1.5rem;
 }
-#socialmedia_icons{
-  
+#socialmedia_icons {
   display: flex;
   flex-direction: row;
- 
 }
 #socialmedia_icons img {
-width: 100%;
-padding: 0.4rem;
-
+  width: 100%;
+  padding: 0.4rem;
 }
 #socialmedia_icons img:first-child {
   padding-left: 0;
@@ -310,147 +305,145 @@ padding: 0.4rem;
   padding-top: 1rem;
 }
 
-
 @media only screen and (min-width: 768px) {
-button, .secondary_button, #view_all {
-  width: 50%;
-}
-#socialmedia_icons img, #socialmedia_icons img:first-child, #socialmedia_icons img:last-child {
- width: 15%;
-  padding: 0.5rem;
-}
-.stars img {
-  width: 20%;
-}
-.icons_wrapper{
-  padding-top: 1rem;
-}
+  button,
+  .secondary_button,
+  #view_all {
+    width: 50%;
+  }
+  #socialmedia_icons img,
+  #socialmedia_icons img:first-child,
+  #socialmedia_icons img:last-child {
+    width: 15%;
+    padding: 0.5rem;
+  }
+  .stars img {
+    width: 20%;
+  }
+  .icons_wrapper {
+    padding-top: 1rem;
+  }
 }
 
 @media only screen and (min-width: 992px) {
-  #art_video_bg section{
+  #art_video_bg section {
     text-align: center;
     width: 70%;
     margin: 0 auto;
   }
-#logo img{
-  display: inline-block;
-}
+  #logo img {
+    display: inline-block;
+  }
 
-#main_buttons {
-  display: flex;
-  flex-direction: row;
-  width: 60%;
-  margin: 0 auto;
-  
-}
-#watch_video, #try_memover {
-  margin: 0;
-  width: 100%;
- 
-}
-.btn_container {
-  width: 100%;
- padding: 1rem;
-}
-#arrow_icon {
-  display: block;
-  margin: 0 auto;
-  padding: 2rem;
-}
-#arrow_icon img{
-  
-  width: 3%;
- 
-}
-section {
-  padding: 4rem;
-}
-.memover_benefits {
-  display: grid;
-  grid-template-columns: 55% 45%;
-  background: var(--main-bg-color);
-}
-.memover_benefits img {
-  grid-column: 1/2;
-  grid-row: 1 /2;
-}
-.memover_benefits section {
-  grid-column: 2 / -1;
-  align-self: center;
-}
-.memover_benefits2 {
-  display: grid;
-  grid-template-columns: 45% 55%;
-  background: var(--main-bg-color);
-}
-.memover_benefits2 section {
-  align-self: center;
-}
-#why_memover {
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
-#why_memover section {
-  
-}
-#why_memover h3 {
-  font-size: 2.5rem;
-}
-.description_wrapper {
-  height: 80px;
-  
-}
-.icons_wrapper{
-  padding-top: 1rem;
-  
-}
-.icons_wrapper:first-child{
-  padding-top: 0;
-  margin-top: 2.5rem ;
-}
-#shop_btn, #view_all, #more_about {
-  width: 30%;
-}
-#stories {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  background: var(--main-bg-color);
-}
-#stories section {
-  grid-column: 1/2;
-  grid-row: 1 /2;
-  align-self: center;
-}
-#stories img {
-  grid-column: 2 / -1;
-  align-self: center;
-}
-#learn_more {
-  display: inline;
-}
-#rent_bg section {
-  width: 90%;
-  margin: 0 auto;
-}
-#rent_bg section h3 {
-  font-size: 2rem;
-  
-}
-#faq {
-  display: grid;
-  grid-template-columns: 55% 45%;
-  background: var(--main-bg-color);
-}
+  #main_buttons {
+    display: flex;
+    flex-direction: row;
+    width: 60%;
+    margin: 0 auto;
+  }
+  #watch_video,
+  #try_memover {
+    margin: 0;
+    width: 100%;
+  }
+  .btn_container {
+    width: 100%;
+    padding: 1rem;
+  }
+  #arrow_icon {
+    display: block;
+    margin: 0 auto;
+    padding: 3rem;
+  }
+  #arrow_icon img {
+    width: 3%;
+  }
+  section {
+    padding: 4rem;
+  }
+  .memover_benefits {
+    display: grid;
+    grid-template-columns: 55% 45%;
+    background: var(--main-bg-color);
+  }
+  .memover_benefits img {
+    grid-column: 1/2;
+    grid-row: 1 /2;
+  }
+  .memover_benefits section {
+    grid-column: 2 / -1;
+    align-self: center;
+  }
+  .memover_benefits2 {
+    display: grid;
+    grid-template-columns: 45% 55%;
+    background: var(--main-bg-color);
+  }
+  .memover_benefits2 section {
+    align-self: center;
+  }
+  #why_memover {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+  #why_memover section {
+  }
+  #why_memover h3 {
+    font-size: 2.5rem;
+  }
+  .description_wrapper {
+    height: 80px;
+  }
+  .icons_wrapper {
+    padding-top: 1rem;
+  }
+  .icons_wrapper:first-child {
+    padding-top: 0;
+    margin-top: 2.5rem;
+  }
+  #shop_btn,
+  #view_all,
+  #more_about {
+    width: 30%;
+  }
+  #stories {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    background: var(--main-bg-color);
+  }
+  #stories section {
+    grid-column: 1/2;
+    grid-row: 1 /2;
+    align-self: center;
+  }
+  #stories img {
+    grid-column: 2 / -1;
+    align-self: center;
+  }
+  #learn_more {
+    display: inline;
+  }
+  #rent_bg section {
+    width: 90%;
+    margin: 0 auto;
+  }
+  #rent_bg section h3 {
+    font-size: 2rem;
+  }
+  #faq {
+    display: grid;
+    grid-template-columns: 55% 45%;
+    background: var(--main-bg-color);
+  }
 
-#reviews {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-#reviews h2{
-  grid-column: 1 / -1;
-}
-.btn_wrapper {
-  grid-column: 1 / -1;
-}
+  #reviews {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  #reviews h2 {
+    grid-column: 1 / -1;
+  }
+  .btn_wrapper {
+    grid-column: 1 / -1;
+  }
 }
