--- a/style.css
+++ b/style.css
@@ -383,6 +383,8 @@ section {
 .memover_benefits section {
   grid-column: 2 / -1;
   align-self: center;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 .memover_benefits2 {
   display: grid;
@@ -391,6 +393,8 @@ section {
 }
 .memover_benefits2 section {
   align-self: center;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 #why_memover {
   display: grid;
@@ -424,6 +428,8 @@ section {
   grid-column: 1/2;
   grid-row: 1 /2;
   align-self: center;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 #stories img {
   grid-column: 2 / -1;
@@ -494,5 +500,14 @@ section {
 #socialmedia_icons img {
   
  margin: 0;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+h3 {
+  font-size: 1.75rem;
+  font-weight: normal;
 }
 }
