--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ section {
   object-position: center;
   width: 100%;
   height: 90%;
-  position: fixed;
+  position: absolute;
   z-index: -1;
 }
 #art_video_bg section {
