--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ h1 {
   color: var(--main-text-color);
   font-weight: bold;
   font-size: 2.4rem;
-
   text-transform: uppercase;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 h1,
 h2,
@@ -29,12 +30,9 @@ a {
   font-family: var(--primary-font);
   color: var(--main-text-color);
 }
-h2,
-h3 {
-}
 p {
-  font-size: 1.125em;
-  line-height: 1.75rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 h3 {
   font-size: 1.75rem;
@@ -57,7 +55,7 @@ img {
   margin: 0 auto;
 }
 button {
-  padding: 1.5rem 0;
+  padding: 1.2rem 1rem;
   text-align: center;
   text-decoration: none;
   border: 3px solid var(--color-4);
@@ -70,7 +68,7 @@ button {
   font-size: 1.375rem;
   margin: 0 auto;
   display: block;
-  width: 320px;
+  width: 340px;
   margin-bottom: 1rem;
   margin-top: 1.75rem;
 }
@@ -78,16 +76,15 @@ button {
 .secondary_button {
   color: var(--secondary-text-color);
   background-color: var(--color-4);
-
-  padding: 1.5rem 0;
+  padding: 1.2rem 1rem;
   text-align: center;
   text-decoration: none;
   font-size: 1.375rem;
-  border: 3px solid var(--main-bg-color);
+  border: 3px solid var(--color-4);
   cursor: pointer;
   text-transform: uppercase;
   display: block;
-  width: 320px;
+  width: 340px;
 }
 section {
   padding: 2rem 1.5rem;
@@ -101,17 +98,11 @@ section {
   background-color: var(--main-bg-color);
 }
 
-/* #art_video_bg {
-  
-  background: black;
-  
-} */
-
 #videoBG {
   object-fit: cover;
   object-position: center;
   width: 100%;
-  height: 90%;
+  height: 100%;
   position: absolute;
   z-index: -1;
 }
@@ -158,9 +149,6 @@ section {
   margin: 0;
   width: 90%;
 }
-
-.icon {
-}
 .icon_title {
   font-family: var(--primary-font);
   color: var(--secondary-text-color);
@@ -183,8 +171,6 @@ section {
   background-position: 40% bottom;
   margin-top: 2rem;
   display: grid;
-}
-#shop_btn {
 }
 #shop_bg section {
   align-self: center;
@@ -306,10 +292,6 @@ section {
 }
 
 @media only screen and (min-width: 768px) {
-  button,
-  .secondary_button,
-  #view_all {
-  }
   #socialmedia_icons img,
   #socialmedia_icons img:first-child,
   #socialmedia_icons img:last-child {
@@ -322,6 +304,14 @@ section {
   .icons_wrapper {
     padding-top: 1rem;
   }
+  #videoBG {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -333,18 +323,39 @@ section {
   #logo img {
     display: inline-block;
   }
-
+  #videoBG {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    z-index: -1;
+  }
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 0;
+    margin-top: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+    font-weight: 600;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
+  #art_video_bg p {
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+  }
   #main_buttons {
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: center;
+    padding-top: 4rem;
   }
   #watch_video,
   #try_memover {
     margin: 0;
-  }
-  #try_memover {
   }
   .btn_container {
     padding-right: 1.5rem;
@@ -389,8 +400,6 @@ section {
     display: grid;
     grid-template-columns: 50% 50%;
   }
-  #why_memover section {
-  }
   #why_memover h3 {
     font-size: 2.5rem;
   }
@@ -421,9 +430,7 @@ section {
     grid-column: 2 / -1;
     align-self: center;
   }
-  #learn_more {
-    display: inline;
-  }
+
   #rent_bg section {
     width: 90%;
     margin: 0 auto;
@@ -494,6 +501,7 @@ section {
     font-weight: normal;
   }
 }
+
 /* *******form section******* */
 #form h5 {
   color: var(--secondary-text-color);
